--- a/SearchService/appsettings.json
+++ b/SearchService/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "RabbitMQ": "amqp://user:password@localhost:5672"
+  }
 }
