--- a/ProductService/appsettings.json
+++ b/ProductService/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Default": "Host=localhost;Port=5433;Database=demo-product;Username=postgres;Password=password"
+  }
 }
