chore: update Elasticsearch and Kibana images to version 9.1.2

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -80,7 +80,7 @@ services:
       - "8083:8083"
 
   elasticsearch:
-    image: docker.elastic.co/elasticsearch/elasticsearch:8.11.0
+    image: docker.elastic.co/elasticsearch/elasticsearch:9.1.2
     container_name: elasticsearch
     environment:
       - discovery.type=single-node
@@ -93,7 +93,7 @@ services:
       - elasticsearch_data:/usr/share/elasticsearch/data
 
   kibana:
-    image: docker.elastic.co/kibana/kibana:8.11.0
+    image: docker.elastic.co/kibana/kibana:9.1.2
     container_name: kibana
     depends_on:
       - elasticsearch
@@ -110,3 +110,4 @@ volumes:
     name: general-rabbitmq
 
   elasticsearch_data:
+    name: "elasticsearch_data"
