--- a/ProductService/Properties/launchSettings.json
+++ b/ProductService/Properties/launchSettings.json
@@ -14,6 +14,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": false,
+      "launchUrl": "https://localhost:7171/scalar",
       "applicationUrl": "https://localhost:7171;http://localhost:5151",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
