--- a/SearchService/Properties/launchSettings.json
+++ b/SearchService/Properties/launchSettings.json
@@ -14,6 +14,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": false,
+      "launchUrl": "https://localhost:7070/scalar",
       "applicationUrl": "https://localhost:7070;http://localhost:5050",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
