feat: configure Elasticsearch client

--- a/SearchService/appsettings.json
+++ b/SearchService/appsettings.json
@@ -7,6 +7,11 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "RabbitMQ": "amqp://user:password@localhost:5672"
+    "RabbitMQ": "amqp://user:password@localhost:5672",
+    "Elasticsearch": "http://localhost:9200"
+  },
+  "ElasticsearchSettings": {
+    "DefaultIndex": "products",
+    "NodeUrl": "http://localhost:9200"
   }
 }
